--- a/docs/styles.css
+++ b/docs/styles.css
@@ -26,6 +26,19 @@ h1 {
     font-size: 32px;
     text-align: center;
     color: var(--blue);
+    user-select: none; /* supported by Chrome and Opera */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+}
+
+img {
+    user-select: none; /* supported by Chrome and Opera */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
 body {
@@ -35,6 +48,19 @@ body {
     background-color: var(--white); /*barva ozadja*/
     color: var(--normal-black); /*text*/
     transition: background 0.2s linear;
+}
+
+.disable-text-select {
+    user-select: none; /* supported by Chrome and Opera */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+}
+
+/*za text bliz labela settings*/
+.not-clickable {
+    pointer-events: none;
 }
 
 #info-icon {
@@ -222,13 +248,16 @@ body {
 
 .settings-content {
     position: absolute;
-    top: 35%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
     background-color: var(--white);
     border-radius: 7px;
-    width: 300px;
-    height: 280px;
+    width: 310px;
+
+    height: auto;
+    min-height: 270px;
+
     z-index: 2;
     text-align: center;
     padding: 20px;
@@ -267,7 +296,7 @@ body {
 .toggle-advanced-mode {
     color: var(--normal-black);
     text-align: left;
-    margin-top: 30px;
+    margin-top: 5px;
     font-size: 18px;
 }
 
@@ -276,22 +305,55 @@ body {
     text-align: left;
     margin-top: 50px;
     font-size: 18px;
+    cursor: default;
 }
 
+.text-border {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-color: var(--normal-black);
+    border-radius: 5px;
+    border-width: 1px;
+    border-style: solid;
+}
+
+.text-border-dark {
+    border-color: var(--white);
+}
+
+.padding-inside {
+    margin: 10px;
+}
+
+.dark-mode-info {
+    position: relative;
+}
+
+/*pozicija modrega checkboxa za advanced mode*/
 #advancedModeCheckbox {
+    position: relative;
+    top: 25px;
+    left: 225px;
     width: 17px;
     height: 17px;
-    position: absolute;
-    top: 102.5px;
-    margin-left: 30px;
+}
+
+.image-margin-top {
+    margin-top: 10px;
+    text-align: center;
 }
 
 /* dark mode toggle*/
 /*pozicija*/
 .dark-mode-toggle {
     position: absolute;
-    left: 65%;
-    top: 61%;
+    left: 200px;
+    top: 1px;
+    text-align: center;
+}
+
+.align-center {
+    text-align: center;
 }
 
 .dark-mode-checkbox {
@@ -389,6 +451,10 @@ body {
     #settings-icon:active {
         font-size: 21px;
     }
+
+    .settings-content {
+        top: 42%;
+    }
 }
 
 @media (orientation: landscape) {
@@ -456,6 +522,10 @@ body {
 
     #settings-icon:active {
         font-size: 21px;
+    }
+    .settings-content {
+        top: 47%;
+        width: 90%;
     }
 }
 
